@@ -13,6 +13,8 @@ class Tile : SpriteGameObject
     protected TileType type;
     protected bool hot;
     protected bool ice;
+    protected bool speed;
+    protected bool slow;
 
     public Tile(string assetname = "", TileType tp = TileType.Background, int layer = 0, string id = "")
         : base(assetname, layer, id)
@@ -20,6 +22,8 @@ class Tile : SpriteGameObject
         type = tp;
         hot = false;
         ice = false;
+        speed = false;
+        slow = false;
     }
 
     public override void Draw(GameTime gameTime, SpriteBatch spriteBatch)
@@ -46,5 +50,17 @@ class Tile : SpriteGameObject
     {
         get { return ice; }
         set { ice = value; }
+    }
+
+    public bool Speed
+    {
+        get { return speed; }
+        set { speed = value; }
+    }
+
+    public bool Slow
+    {
+        get { return slow; }
+        set { slow = value; }
     }
 }
